# gemma-clipper

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
docs/slides/: gemma-clipper-slides.html  index.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ClipPreview.tsx  ExportPanel.tsx  JobList.tsx  JobProgress.tsx  SceneList.tsx  VideoUpload.tsx
frontend/src/hooks/: useJobs.ts
src/gemma_clipper/: __init__.py  cli.py  config.py  db.py
src/gemma_clipper/ai/: __init__.py  analyzer.py  gemma_client.py  prompts.py  ranker.py
src/gemma_clipper/api/: app.py  models.py
src/gemma_clipper/api/routes/: _helpers.py  clips.py  videos.py
src/gemma_clipper/core/: _subprocess.py  captions.py  export.py  scenes.py  silence.py  video.py  youtube.py
src/gemma_clipper/workers/: pipeline.py
tests/: test_e2e_real.py
