[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma-clipper"
version = "0.1.0"
description = "AI-powered video clipping system using Gemma 4 — no API key required"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "jasperan" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "typer[all]>=0.12.0",
    "rich>=13.0",
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
gemma-clipper = "gemma_clipper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_clipper"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
